--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,34 @@
-version: '3.8'
 services:
   vprodb:
     build: 
-       context: ./Docker-files/db
+      context: ./Docker-files/db
     image: lomamadou/vprofiledb
-    container_name:  vprodb  
+    container_name: vprodb  
     ports:
       - "3306:3306"
     volumes:
       - vprodbdata:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=vprodbpass  
-      
+
   vprocache01:
     image: memcached
     ports:
-      -"11211:11211"
+      - "11211:11211"
 
   vpromq01:
     image: rabbitmq
     ports:
-      -"15672:15672"
+      - "15672:15672"
     environment:
-      -RABBITMQ_DEFAULT_USER=guest
-      -RABBITMQ_DEFAULT_PASS=guest  
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest  
 
   vproapp:
     build: 
-       context: ./Docker-files/app
+      context: ./Docker-files/app
     image: lomamadou/vprofileapp
-    container_name:  vproapp
+    container_name: vproapp
     ports:
       - "8080:8080"
     volumes:
@@ -37,12 +36,12 @@ services:
 
   vproweb:
     build: 
-       context: ./Docker-files/web
+      context: ./Docker-files/web
     image: lomamadou/vprofileweb
-    container_name:  vproweb
+    container_name: vproweb
     ports:
       - "80:80"
 
 volumes:
   vprodbdata: {}
-  vproappdata: {}   
+  vproappdata: {}
